--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .App {
+  position: absolute;
+  top: -15%;
+  left: 32%;
   text-align: center;
 }
 
@@ -35,4 +38,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+body {
+  background: dodgerblue;
 }
